--- a/_posts/2023-04-12-QA_PreStage_v1_11.md
+++ b/_posts/2023-04-12-QA_PreStage_v1_11.md
@@ -10,6 +10,7 @@ tag: v1.11
 [Hopefully, this will be a brief overview of any changes in the version]: #
 
 Issue reported at site where script did not allow itself to be run on multiple servers.
+The Script user could not be verified as a Domain user.
 This was due to missing the default AD container for Users
 
 - Added further error handling for cases where User Context Type could not be determined
