--- a/_posts/2023-04-12-QA_PreStage_v1_11.md
+++ b/_posts/2023-04-12-QA_PreStage_v1_11.md
@@ -11,7 +11,7 @@ tag: v1.11
 
 Issue reported at site where script did not allow itself to be run on multiple servers.
 The Script user could not be verified as a Domain user.
-This was due to missing the default AD container for Users
+This was due to the default AD container for Users being missing/deleted.
 
 - Added further error handling for cases where User Context Type could not be determined
 
